--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,25 @@
 [package]
-name = "tens-core"
+name = "coco"
 version = "0.1.0"
 edition = "2024"
+authors = ["Nkemjika Ohanyere <contact@nkem.dev>"]
+
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "coco"
 
 [dependencies]
+actix-web = "4"
+tokio = { version = "1", features = ["full"] }
+reqwest = "0.12"
+serde = "1.0.228"
+thiserror = "2.0.17"
+alloy = "1.1.3"
+serde_json = "1.0.145"
+dotenvy = "0.15.7"
+tracing-subscriber = "0.3.22"
+tracing = "0.1.43"
+sqlx = {version="0.8.6", features = ["runtime-tokio-rustls", "macros", "chrono", "postgres", "tls-native-tls", "tls-rustls-ring-webpki", "chrono", "uuid", "ipnetwork", "migrate"]}
